# firm-plugins

./: CLAUDE.md  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: fleet-repos.txt  pull_request_template.md
.github/workflows/: claude-implement.reusable.yml  claude-review.reusable.yml  coverage-audit.yml  freshness-audit.yml  release.yml  validate.yml
docs/: SETUP-AND-USAGE.md  STARTER-KIT.md
docs/adr/: 0001-templates-recipes-monorepo-security-docs.md
pending-workflows/: README.md
plugins/dev-lifecycle/.claude-plugin/: plugin.json
plugins/dev-lifecycle/assets/pr/: pull_request_template.md
plugins/dev-lifecycle/assets/scripts/: retrofit-epic.sh
plugins/dev-lifecycle/assets/workflows/: claude-review.yml  claude.yml  epic-checkoff.yml  security.yml
plugins/dev-lifecycle/references/: _TEMPLATE.md  compatibility-matrix.md
plugins/dev-lifecycle/references/authoring/: documentation-standard.md
plugins/dev-lifecycle/references/backend/: anthropic.md  celery.md  django.md  drf.md  fastapi.md  pandas.md  postgres.md  pydantic.md  redis.md  slack-bolt.md  sqlalchemy.md  (+2 more)
plugins/dev-lifecycle/shared/: definition-of-done.md  token-efficiency.md  worker-cadence.md
plugins/dev-lifecycle/templates/: _TEMPLATE-README.md
plugins/dev-lifecycle/templates/backend/django/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
plugins/dev-lifecycle/templates/backend/django/config/: __init__.py  asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
plugins/dev-lifecycle/templates/backend/django/core/: __init__.py  exceptions.py  models.py  pagination.py  serializers.py  urls.py  views.py
plugins/dev-lifecycle/templates/backend/django/core/contract/: __init__.py  errors.py  pagination.py  secret_store.py
plugins/dev-lifecycle/templates/backend/django/core/management/commands/: seed_admin.py
plugins/dev-lifecycle/templates/backend/django/core/migrations/: 0001_initial.py  0002_user_refreshtoken.py  0003_stage5c_account_lifecycle.py  0004_stage13b_user_status.py  0005_stage13d_blog.py  0006_stage13c_moderation.py
plugins/dev-lifecycle/templates/backend/django/core/security/: __init__.py  admin_rate_limit.py
plugins/dev-lifecycle/templates/backend/django/core/security/audit_logging/: __init__.py  middleware.py
plugins/dev-lifecycle/templates/backend/django/core/security/auth/: __init__.py  _cookies.py  _core.py  django.py  permissions.py  stores.py
plugins/dev-lifecycle/templates/backend/django/core/security/cors_lockdown/: __init__.py  _core.py  django.py
plugins/dev-lifecycle/templates/backend/django/core/security/input_validation/: __init__.py  validation.py
plugins/dev-lifecycle/templates/backend/django/core/security/rate_limiting/: __init__.py  django.py
plugins/dev-lifecycle/templates/backend/django/core/security/security_headers/: __init__.py  _core.py  django.py
plugins/dev-lifecycle/templates/backend/django/core/services/: sanitize.py
plugins/dev-lifecycle/templates/backend/django/docs/: fragment.md
plugins/dev-lifecycle/templates/backend/django/tests/: _conformance_urls.py  conftest.py  test_admin_users.py  test_auth.py  test_auth_stores.py  test_auth_stores_stage5c.py  test_blog.py  test_blog_public.py  test_conformance_errors.py  test_conformance_pagination.py  test_cookie_auth.py  test_email_delivery_stage5c.py  test_exceptions.py  test_items.py  test_moderation.py  test_schema_conformance.py  test_security_composition.py
plugins/dev-lifecycle/templates/backend/fastapi/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
plugins/dev-lifecycle/templates/backend/fastapi/alembic/: env.py
plugins/dev-lifecycle/templates/backend/fastapi/alembic/versions/: 0001_create_items_table.py  0002_create_auth_tables.py  0003_stage5c_account_lifecycle.py  0004_stage13b_user_status.py  0005_stage13d_blog.py  0006_stage13c_moderation.py
plugins/dev-lifecycle/templates/backend/fastapi/app/: export_openapi.py  main.py
plugins/dev-lifecycle/templates/backend/fastapi/app/api/: deps.py
plugins/dev-lifecycle/templates/backend/fastapi/app/api/routers/: admin.py  auth.py  blog.py  blog_public.py  health.py  items.py  moderation.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/: config.py  errors.py  settings.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/db/: __init__.py  mixins.py  query.py  repository.py  schema.py  session.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/: __init__.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/audit_logging/: __init__.py  audit.py  middleware.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/auth/: __init__.py  _cookies.py  _core.py  fastapi.py  stores.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/cors_lockdown/: __init__.py  fastapi.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/input_validation/: __init__.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/rate_limiting/: __init__.py  _core.py  fastapi.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/secret_store/: __init__.py
plugins/dev-lifecycle/templates/backend/fastapi/app/core/security/security_headers/: __init__.py  fastapi.py
plugins/dev-lifecycle/templates/backend/fastapi/app/models/: __init__.py  blog_post.py  comment.py  flag.py  item.py  login_attempt.py  refresh_token.py  single_use_token.py  user.py
plugins/dev-lifecycle/templates/backend/fastapi/app/schemas/: admin.py  auth.py  blog.py  health.py  item.py  moderation.py
plugins/dev-lifecycle/templates/backend/fastapi/app/services/: sanitize.py
plugins/dev-lifecycle/templates/backend/fastapi/docs/: fragment.md
plugins/dev-lifecycle/templates/backend/fastapi/tests/: conftest.py  test_admin_users.py  test_auth.py  test_blog.py  test_blog_public.py  test_cookie_auth.py  test_error_envelope.py  test_health.py  test_items.py  test_moderation.py  test_openapi_export.py
scripts/: validate_plugin.py
(+351 files in other folders)
