[project]
name = "django-block"
version = "0.1.0"
description = "Stage 4 Django + DRF backend block: project skeleton, settings, Item model, vendored contract."
requires-python = ">=3.13,<3.14"
dependencies = [
  # Pins mirror references/compatibility-matrix.md's "Backend — Django
  # track" row (this block's `versions-pinned-to` target — see README.md).
  "django==5.2.*",
  "djangorestframework==3.17.*",
  "drf-spectacular==0.30.*",
  # Postgres driver — Django 5.2's `django.db.backends.postgresql` engine
  # auto-detects psycopg2 or psycopg (v3), and Django 5.2 prefers psycopg 3
  # per the matrix note; pin the `binary` extra so no local libpq headers /
  # C toolchain are required to install it (matches the matrix's new
  # psycopg row, PyPI-verified current stable — see README.md's
  # "Composition contract").
  "psycopg[binary]==3.3.*",
  # DATABASE_URL parsing — config/settings.py's own module docstring.
  "dj-database-url==3.1.*",
  # ASGI/WSGI servers this block's config/asgi.py + config/wsgi.py run
  # under, matching backend/fastapi's uvicorn pin where the ASGI path is
  # concerned; gunicorn is the conventional WSGI-path production server.
  "uvicorn[standard]==0.51.*",
  "gunicorn==26.0.*",
]

[dependency-groups]
dev = [
  "pytest==9.1.*",
  "pytest-django==4.12.*",
  "model-bakery==1.24.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "core"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
testpaths = ["tests"]
