[project]
name = "fastapi-block"
version = "0.1.0"
description = "Stage 3 FastAPI backend block: app skeleton, data layer, contract endpoints, auth stubs."
requires-python = ">=3.13,<3.14"
dependencies = [
  # Pins mirror references/compatibility-matrix.md's Backend — Python row
  # (this block's `versions-pinned-to` target — see README.md).
  "fastapi==0.139.*",
  "pydantic==2.13.*",
  "pydantic-settings==2.14.*",
  "sqlalchemy[asyncio]==2.0.*",
  "alembic==1.18.*",
  "asyncpg==0.31.*",
  "uvicorn[standard]==0.51.*",
]

[dependency-groups]
dev = [
  "pytest==9.1.*",
  "pytest-asyncio==1.4.*",
  "httpx==0.28.*",
  "aiosqlite==0.22.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
